--- a/valider payement/validpay.css
+++ b/valider payement/validpay.css
@@ -16,8 +16,13 @@
 body {
   font-family: "Ubuntu";
 }
-
-
+main {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding: 20px;
+    margin-top: 50px;
+}
 
 
 a:visited{
@@ -134,7 +139,10 @@ a:active{
     padding: 20px;
     width: 550px;
     border-radius: 5px;
-    height: 325px;
+    height: auto;
+    
+  
+    
 }
 
 .product-card img {
@@ -155,20 +163,22 @@ a:active{
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    width: 450px;
+    width: 500px;
     font-size: 18px;
     justify-content: center;
     align-self: center;
-    margin-left: 35px;
+ 
     line-height: 30px;
 }
 
 .product-card button:hover {
     background-color: rgba(241, 47, 170, 0.864);
 }
-.product-cardd{
-    width: 550px;
+.cardtow{
+    margin-top: 50px;
+    margin-left: 200px;
 }
+
 h1 {
   display: block;
   font-size: 1.5em;
@@ -245,11 +255,7 @@ h4{
     height: 150px;
     border-radius: 5px;
 }
-main{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
+
 
 
 
@@ -267,6 +273,7 @@ main{
 
 
 footer {
+ 
   display: block;
   background-color: white;
 }
@@ -319,9 +326,4 @@ footer {
 
 @media (max-width: 450px) {
 }
-main {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    padding: 20px;
-}
+
