--- a/detailproduit/detail.css
+++ b/detailproduit/detail.css
@@ -430,17 +430,37 @@ g{
 }
 .greyp{
     color: rgba(128, 128, 128, 0.93);
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     text-decoration: line-through;
     margin-right: 20px;
 }
 .pinkp{
     color:var(--main-color);
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     margin-right: 20px;
     
+}
+.quantity  {
+  width:40px;
+  display: flex;
+  border: none; 
+ 
+}
+.itemimg {
+  width: 25px;
+  height: 25px;
+  border: none;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.itemimgg {
+  width: 25px;
+  height: 25px;
+  border: none;
+  margin-left: 110px;
+  
 }
 .greenspan{
     background-color: rgb(45, 179, 85);
@@ -449,6 +469,7 @@ g{
     font-size: 12px;
     font-weight: 900;
     padding: 5px;
+    height: 25px;
 }
 h4{
     align-items: start;
