--- a/product/product.css
+++ b/product/product.css
@@ -483,7 +483,7 @@ main{
 }
 .images{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 90%;
     margin-top: 15px;
 }
@@ -859,7 +859,110 @@ a:visited{
 
 
 
+/************************responsive*********************************/
 
+ /*tablette responsive*/
+
+ @media  (max-width: 1000px) and (min-width: 640px){
+  .footerheader {
+    display: none;
+  }
+  .headertop{
+    padding-top: 10px;
+  }
+  li, ul{
+    text-align: center;
+    margin-top: 5px;
+  }
+  /* .navp{
+    margin-left: 10px;
+    margin: 0px;
+  } */
+  .dot-container{
+    margin-top: 10px;
+  }
+
+
+   .flex-box{
+    /* display: flex;
+    flex-wrap: wrap; */
+    margin-left: 0;
+   }
+   .right{
+    margin-left: 0;
+
+   }
+   .big-img{
+    width: 162px;
+   }
+   .small-img{
+  width: 45px;
+   }
+   .images{
+    margin-top: 0;
+  
+   }
+   .pname{
+    font-size: 14px;
+   }
+   .pinkp{
+    font-size: 14px;
+    margin-right: 0px;
+   }
+   .greyp{
+    font-size: 14px;
+   }
+   .price{
+    margin-top: -30px;
+   }
+   .quantity p
+   {
+    font-size: 14px;
+   margin-bottom: 12px;
+   }
+   .alink {
+    font-size: 10px;
+    
+   }
+ }
+
+
+ /***************************************************************/
+
+ /*mobile responsive*/
+ @media  (max-width: 770px)  {
+ 
+  .footerheader {
+    display: none;
+  }
+  .footerbody{
+    padding: 0 20 0 20;
+    display: flex;
+    font-size: 18px; 
+  }
+  .headertop{
+    width: 100%;
+    margin: 0;
+    padding: 0
+  }
+  .navbar{
+    width: 100%;
+    margin: 0;
+    padding: 8px;
+    text-align: center;
+    
+  }
+  .button {
+    width: 90px;
+    height: 30px;
+    margin-left: -400px;
+  }
+  
+  .dot-container{
+    margin-top: 20px;
+  }
+  
+ }
 
 
 
